[project]
name = "jagex-account-creator"
version = "0.1.0"
description = "Automatic, multi-threaded Jagex account creation via Chrome browser."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "drissionpage>=4.1.1.2",
    "imap-tools>=1.11.0",
    "loguru>=0.7.3",
    "platformdirs>=4.9.2",
    "pydantic>=2.12.5",
    "pyotp>=2.9.0",
    "wreq>=0.10.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
